horizontal scroll fixed

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -10,8 +10,8 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     &__logo{
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
         margin-inline-start: 40px;
     }
 
